z-index fix

--- a/binhong.css
+++ b/binhong.css
@@ -34,6 +34,10 @@ p{
 	letter-spacing: 0.1rem;
 }
 
+#header.sticky-header:not(.static-sticky).sticky-style-2, #header.sticky-header:not(.static-sticky).sticky-style-3{
+	z-index: 998;
+}
+
 #header.sticky-style-2 {
     height: 126px;
 }
@@ -225,7 +229,7 @@ span.footer-icon {
 div.shadowBottom {
     box-shadow: 0 5px 5px #aaa;
     position: relative;
-    z-index: 999;
+    z-index: 997;
 }
 
 @media (max-width: 991.98px) {
@@ -236,7 +240,7 @@ div.shadowBottom {
 	    width: 100%;
 	    /* height: 81px; */
 	    background: #FFF;
-	    z-index: 1001;
+	    z-index: 999;
 	    box-shadow: 0 0px 1px #999;
 	}
 
